--- a/src/styles/components/resources.module.scss
+++ b/src/styles/components/resources.module.scss
@@ -1,7 +1,34 @@
+.Pagination{
+  >a{
+    color: #6C757D;
+    border: solid #ADB5BD 1px;
+    border-radius: 4px;
+    padding: 12px 16px;
+    text-decoration: none;
+    cursor: pointer;
+    &.disabled{
+      color: #ADB5BD;
+      pointer-events: none;
+      cursor: not-allowed;
+    }
+    &.active{
+      background-color: #0093D5;
+      color: white;
+      border-color: #0093D5;
+    }
+  }
+}
 
+.PaginationContainer{
+  padding: 20px 0px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: flex-end;
+}
 
 .ResourceCard{
-  width: 30%;
+  width: 31%;
   background-color: #F3F3F2;
   box-shadow: 0px 4px 16px 0px #00000040;
   border-radius: 18px;
