--- a/src/styles/pages/pages.module.scss
+++ b/src/styles/pages/pages.module.scss
@@ -44,6 +44,10 @@
   background-repeat: no-repeat;
 }
 .MapDetails{
+  .RelatedDocuments{
+    color: #0093D5;
+    font-size: 1rem;
+  }
   h5{
     font-family: Roboto Serif;
     font-size: 1.5rem;
