--- a/src/styles/components/multitab.module.scss
+++ b/src/styles/components/multitab.module.scss
@@ -3,7 +3,41 @@
   min-height: 300px;
   width: 100%;
   float: left;
+  .MultitabItemTitle{
+    font-family: Roboto Serif;
+    font-weight: 400;
+    font-size: 23px;
+    padding: 0px;
+    margin: 0px;
+    letter-spacing: 0%;
+    color:  #006CB0;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .TabList{
+    &::before{
+      border-bottom: #006CB0 solid 2px;
+    }
+   
+  }
+  .TabContent{
+    font-family: Roboto;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 180%;
+    letter-spacing: 0%;
+
+  }
+  .TabButton[data-active]{ 
+    border-bottom: #006CB0 solid 3px;
+    h3 {
+    font-weight: bold;
+    }
+  }
 }
+
+
+
 
 .MultitabContainer{
   width: 100%;
