--- a/src/styles/components/slider.module.scss
+++ b/src/styles/components/slider.module.scss
@@ -57,10 +57,42 @@
   padding: 10px;
   width: 100%;
   .SliderItemContainer{
-    overflow: visible;
-    padding: 0px;
+    padding: 20px 15px;
   }
 }
+
+.TrendingTopicSection{
+  width:100%;
+  height: 383px;
+  padding: 16px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  background: #F3F3F2;
+  box-shadow: 0px 0px 17px 0px rgb(0 0 0 / 31%);
+
+  .TrendingLink{
+    .TrendingButton{
+      float: right;
+    }
+  }
+    h3{
+      color: var(--Colors-Pure-Black, #000);
+      font-family: "Roboto Serif";
+      font-size: 19px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 120%; /* 26.4px */
+    }
+    p{
+      color: var(--Colors-Pure-Black, #000);
+      font-family: Roboto;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 300;
+      line-height: 160%; /* 25.6px */
+    }
+}
+
 
 .TrandingSlider{
   position: absolute;
