--- a/src/styles/components/cards.module.scss
+++ b/src/styles/components/cards.module.scss
@@ -16,13 +16,14 @@
   max-width: 30%;
   background-color: #F3F3F2;
   border-radius: 16px;
-  padding: 5px;
+  padding: 5px 20px;
+  max-height: 130px;
   cursor: pointer;
   box-shadow: 0px 4px 16px 0px #00000040;
   .cardContent{
     font-family: Roboto Serif;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.4rem;
     line-height: 100%;
     letter-spacing: 0%;
   }
@@ -30,6 +31,7 @@
     padding: 5px;
     img{
       width: 100%;
+      max-width: 80px;
     }
   }
 }
