--- a/src/styles/components/video.module.scss
+++ b/src/styles/components/video.module.scss
@@ -57,6 +57,25 @@
   position: relative;
 }
 
+.TitleWithIcon{
+  text-transform: capitalize;
+  padding-left: 40px;
+  background-image: url('../../../public/local/svg/simbol.svg');
+  background-position: left center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  font-family: "Roboto Serif";
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  max-width: 50vw;
+  @media (max-width: '750px') {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
 .RelatedVideosSection{
   width: 100%;
   padding: 60px 0px;
