--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -214,9 +214,29 @@
   }
 }
 
+.TitleWithIcon{
+  text-transform: capitalize;
+  padding-left: 40px;
+  background-image: url('../../../public/local/svg/simbol.svg');
+  background-position: left center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  font-family: "Roboto Serif";
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  max-width: 50vw;
+  @media (max-width: '750px') {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+
 .CountryRss{
   padding:40px 0px;
-  background-color: #F3F3F3;
+  background-color: #cdd3e7;
   h4{
     font-family: "Roboto Serif";
     font-size: 1.5rem;
