--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -198,12 +198,22 @@
       p{
         font-size: 1rem;
         font-weight: 300;
+        margin-top: 3px;
+        margin-bottom: 3px;
+      }
+      a{
+        text-decoration: none;
+        color: #006CB0;
       }
     }
   }
   
 }
-
+.EmbedContent{
+  iframe{
+    border:none;
+  }
+}
 .CountryRersources{
   h4{
     font-family: "Roboto Serif";
