--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -1,4 +1,4 @@
-.MegaMenuContainerWithItems{
+.MegaMenuContainerWithItems {
   display: flex;
   width: 100%;
   height: 100%;
@@ -6,29 +6,40 @@
   align-content: flex-start;
   column-gap: 15px;
   position: relative;
-    a{
-      display: flex;
-      cursor: pointer;
-      font-size: 1.3rem;
-      font-weight: 400;
-      z-index: 1;
-      &:hover{
-        font-weight: 800;
-      }
-    }
-  ::before{
+  overflow: hidden; // <- opcional, mas ajuda visualmente
+  .FullImageSubItembBtn{
+    right: 0px;
+    text-decoration: none;
+    z-index: 99;
+  }
+  &::before {
     content: '';
     width: 100%;
     height: 100%;
     top: 0;
-    bottom: 0;
-    z-index: -1;
+    left: 0; 
+    z-index: 1;
     background-color: #f6f6f6ad;
     position: absolute;
   }
-    
-  
+
+  .InternalItem {
+    display: flex;
+    text-decoration: none;
+    color:black;    cursor: pointer;
+    font-size: 1.2rem;
+    letter-spacing: 0.13rem;
+    font-weight: 400;
+    z-index: 1;
+    border: solid #778899 1px;
+    border-radius: 8px;
+    padding: 2px 10px;
+    &:hover {
+      font-weight: 800;
+    }
+  }
 }
+
 
 .HeaderContent{
   background-color: white;
