--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -4,7 +4,7 @@
   height: 100%;
   flex-wrap: wrap;
   align-content: flex-start;
-  column-gap: 15px;
+  column-gap: 6px;
   position: relative;
   overflow: hidden; // <- opcional, mas ajuda visualmente
   .FullImageSubItembBtn{
@@ -27,15 +27,22 @@
     display: flex;
     text-decoration: none;
     color:black;    cursor: pointer;
-    font-size: 1.2rem;
-    letter-spacing: 0.13rem;
+    font-size: 1.08rem;
+    letter-spacing: 0.11rem;
     font-weight: 400;
     z-index: 1;
     border: solid #778899 1px;
     border-radius: 8px;
     padding: 2px 10px;
+    margin-bottom: 8px;
+    background: rgba(255, 255, 255, 0.2); /* cor semi-transparente */
+  backdrop-filter: blur(15px); /* aplica o desfoque */
+  -webkit-backdrop-filter: blur(15px);
     &:hover {
-      font-weight: 800;
+      transition: 0.2s;
+      font-weight: 400;
+      color: white;
+      background-color: #0093d5;
     }
   }
 }
