--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -231,12 +231,16 @@
       p{
         font-size: 1rem;
         font-weight: 300;
-        margin-top: 3px;
-        margin-bottom: 3px;
+        margin-top: 10px;
+        margin-bottom: 15px;
+        line-height: 1.3rem;
       }
       a{
         text-decoration: none;
         color: #006CB0;
+        &:hover{
+          font-weight: 600;
+        }
       }
     }
   }
